as add timetracking box layout is now fixed, should align summary, category etc texts to right

--- a/htdocs/css/main.css
+++ b/htdocs/css/main.css
@@ -509,3 +509,12 @@ td.light {
 .chosen-select {
     width:290px;
 }
+
+/* add timetracking box */
+#add_time_form th {
+	text-align: right;
+	padding-right: 0.3em;
+}
+#add_time_form .title th {
+	text-align: left;
+}
